# renote

./: .gitignore  pyproject.toml
renote/: __main__.py  db.py  main.py  note.py  note_repo.py
