[tool.poetry]
name = "renote"
version = "0.1.0"
description = ""
authors = ["Goutham Krishna K V <gauthamkrishna9991@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
